--- a/Oz/Objects/Input + Transmitter.build_log.htm
+++ b/Oz/Objects/Input + Transmitter.build_log.htm
@@ -18,15 +18,15 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0 
 <h2>Project:</h2>
-C:\Users\guzeu\OneDrive\מסמכים\GitHub\Oz\Input + Transmitter.uvproj
-Project File Date:  12/23/2025
+C:\Github\Final_Project\Oz\Input + Transmitter.uvproj
+Project File Date:  12/30/2025
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
 compiling main.c...
 compiling bus_encoder.c...
 compiling peripherals.c...
-compiling rx_handler.c...
+compiling tx_handler.c...
 linking...
 Program Size: data=42.2 xdata=190 code=720
 ".\Objects\Input + Transmitter" - 0 Error(s), 0 Warning(s).
